--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 rvm:
-  - 2.0.0
-script: bundle exec rake
-before_install:
-  - gem update --system
+  - 2.2.6
+  - 2.3.3
+script: rspec spec
+install:
+  - bundle install
 services:
   - redis-server
